# Snapregister-platform

./: .gitignore
mobile/: .env.sample  .gitignore  API_CONFIG_CHECK.md  API_CONNECTION_GUIDE.md  API_SETUP.md  DEVELOPER_GUIDE.md  DEVELOPMENT_CHECKLIST.md  INSTALLATION_COMPLETE.md  MOBILE_API_SETUP.md  MOBILE_LOGIN_FIX.md  NEXT_PHASE_PLAN.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SETUP_SIMPLE.md  TYPESCRIPT_FIXES_SUMMARY.md  app.json  babel.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json  setup-env.js  tsconfig.json
mobile/docs/: IMAGE_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_SETUP_SUMMARY.md  README_TESTS.md  TESTING_GUIDE.md  TESTS_CREATED.md  TEST_COVERAGE_SUMMARY.md
website/: .env.sample  .gitignore  README.md  TEST_IMPLEMENTATION_SUMMARY.md  WARRANTY_CHECKLIST.md  WARRANTY_IMPLEMENTATION_SUMMARY.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
website/__mocks__/: jose.ts
website/docs/: ARCHITECTURE.md  BULLMQ_CONFIGURATION.md  COOKIE_ERROR_FIX.md  DEVICE-CAPTURE-SYSTEM.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MIGRATION-GUIDE.md  PHASE3_MONITORING.md  QUICK-START.md  REDIS_SETUP.md  WARRANTY_SETUP.md  (+9 more)
website/services/warranty-analyzer/: .dockerignore  .env.sample  .gitignore  Dockerfile  FEATURES.md  INTEGRATION.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_service.py
website/services/warranty-analyzer/app/: __init__.py  config.py  database.py  document_processor.py  main.py  models.py  warranty_analyzer.py
(+223 files in other folders)
